[project]
name = "ai-researcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "dotenv>=0.9.9",
    "google-generativeai>=0.3.2",
    "huggingface-hub>=0.36.0",
    "langchain>=1.0.2",
    "langchain-anthropic>=1.0.0",
    "langchain-core>=1.0.1",
    "langchain-google-genai>=0.0.1",
    "langchain-huggingface>=1.0.0",
    "langchain-openai>=1.0.1",
    "langgraph>=1.0.1",
    "numpy>=2.3.4",
    "openai>=2.6.1",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "streamlit>=1.50.0",
    "transformers>=4.57.1",
    "typing-extensions>=4.15.0",
    "xmltodict>=1.0.2",
]
